# jfrog-cli-core

./: .gitignore  Makefile  README.md  go.mod  go.sum  j  jfrogclicore.go  staticcheck.conf
.frogbot/: frogbot-config.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
.github/workflows/: README.md  analysis.yml  build-gate.yml  cla.yml  dependabot-auto-merge.yml  embedded-jar-test.yml  embeded-jar-test.yml  frogbot-fix.yml  frogbot-scan-and-fix.yml  frogbot-scan-pr.yml  frogbot-scan-pull-request.yml  frogbot-scan-repository.yml  monitor-stale.yml  test.yml  update-jf-dependencies.yml  validate-cli-security.yml
artifactory/commands/: command.go  config.go  config_test.go
buildscripts/: download-jars.sh
commandsummary/: commandsummary.go  commandsummary_test.go
general/: stats.go  utils.go  utils_test.go
githubsummaries/: githubjobsummary.go  githubjobsummary_test.go
jfrog-cli-core/: go.mod
jobsummaries/: jobsummary.go  jobsummary_test.go
lifecycle/: common.go  common_test.go  createcommon.go  createcommon_test.go  createfromaql.go  createfromartifacts.go  createfrombuilds.go  createfrombundles.go  deletelocal.go  deleteremote.go  distribute.go  export.go  import.go  promote.go
plugins/: README.md  commonutils.go  components.go  conversionlayer.go  pluginmain.go  signature.go
tests/: btest.sh  jfrogclicore_test.go  poc_github_token_test.go  release.md  test.sh
xray/commands/testdata/poetry-project/: pyproject.toml
xray/commands/testdata/poetry-project/tests/: test_my_poetry_project.py
(+989 files in other folders)
