[Tool.poetry]
name = "my-poetry-project"
version = "0.1.0"
description = ""
authors = ["Tal Arian <tala@jfrog.com>"]

[Tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.0"

[Tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
